--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,135 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 700px;
+}
+
+header{
+  background-color: #1c5380;
+  background-image: url('./../images/bgtile.png');
+  height: 30%;
+}
+
+#container {
+  display: flex;
+  padding : 0% 10%;
+  position: relative;
+  top: -25%;
+  width: 80%;
+  height:65%;
+  align-items: center;
+}
+
+#phones {
+  display: flex;
+  align-items: center;
+  width: 40%;
+  height: 80%;
+  padding: 2%;
+}
+
+#phones img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  height: 80%;
+  padding: 2%;
+}
+
+#content > :first-child {
+  display: flex;
+  align-items: center;
+  width: 96%;
+  height: 25%;
+  padding: 1%;
+}
+
+#content > :first-child img {
+  max-width: 60%;
+  margin-right: 15%;
+}
+
+#content > :first-child button {
+  width: 25%;
+  background: linear-gradient(#1c5380,#06365f);
+  display:flex;
+  align-items: center;
+  color: white;
+  font-size: 12px;
+  height: 60%;
+  border: 1px solid #06365f;
+  border-radius: 5px;
+  font-weight: bold;
+  background-image: -webkit-linear-gradient(bottom, #4885b8, #06365f);
+  background-image: -moz-linear-gradient(top, #4885b8, #06365f);
+  background-image: -ms-linear-gradient(top, #4885b8, #06365f);
+  background-image: -o-linear-gradient(top, #4885b8, #06365f);
+  background-image: linear-gradient(to bottom, #4885b8, #06365f);
+}
+
+#content > :first-child button img {
+  max-height: 80%;
+  max-width: 30%;
+  margin-right: 5px;
+}
+
+#frame {
+  background-image: url(/images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 84%;
+  padding: 3% 8%;
+  margin-top: 2%;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 18px;
+  font-weight:bold ;
+}
+
+#frame p {
+  font-size: 12px;
+}
+
+#stores {
+  display: flex;
+  align-items: center;
+}
+
+#stores img {
+  max-width: 40%;
+  margin-right: 3%;
+}
+
+footer {
+  position: relative;
+  top: -25%;
+  width: 100%;
+  height : 10%;
+  display: flex;
+  justify-content: center;
+}
+
+a {
+  color:#06365f;
+  font-size: 10px;
+  list-style: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  width: fit-content;
+  margin-right: 2%;
+  text-decoration: none;
+}
+
+a:last-child{
+  color:grey;
 }
