--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,14 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+img {
+  width: 100%;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.display-flex{
+  display: flex;
 }
