--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,22 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+.generalSquare {display: flex;
+width: 70%;
+}
+
+.rightColumn {margin-left: 40px;}
+
+.logos {background-color: green;
+display: flex;
+;
+}
+
+.text {background-color: white;
+margin-top: 20px;}
+
+.button {background-color: red;}
