--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,106 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+}
+
+#container {
+  width: 75%;
+  margin: 0 auto;
+  margin-top: 90px;
+  display: flex;
+}
+
+.content-phones{
+  width: 35%;
+  text-align: right;
+}
+
+.content-text {
+  width: 65%;
+}
+
+.header-brand {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.brand {
+  padding-left: 60px;
+}
+
+.btn {
+  margin-right: 70px;
+  padding: 10px;
+  height: 20px;
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(#7390ad, #45688b);
+  display: flex;
+  align-items: center;
+}
+
+.login {
+  margin-left: 10px;
+  color: white;
+}
+
+.description {
+  margin: 30px 60px;
+  margin-top: 30px;
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 5px 30px;
+}
+
+h2 {
+  color: #1c5380;
+  font-size: 40px;
+  line-height: 40px;
+}
+
+.text {
+  font-size: 16px;
+  margin: 10px 0;
+}
+
+.logos-download {
+  margin-top: 30px;
+}
+
+.img-margin-right {
+  margin-right: 20px;
+}
+
+span {
+    font-weight: bold;
+}
+
+.menu {
+  width: 45%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.copyright {
+  color: grey;
 }
