--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,101 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+/*img {
+  width: 100%;
+}*/
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 40px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+h1{
+ font-size: 2em;
+}
+
+article{
+  background-color: white;
+  background-image: url(../images/frame.png)  /*no-repeat center / cover*/;
+  background-repeat: no-repeat;
+  width: 70%;
+  margin: 20px;
+  padding: 30px;
+  border-radius: 5px;
+}
+
+p {
+  margin: 10px 0px;
+}
+
+figure {
+  width: 40%;
+}
+
+a {
+  color: #1c5380;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+footer{
+  margin: 20px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.darbluetext {
+  color: #06365f;
+}
+
+.login-button-text{
+  color: white;
+  text-align: center;
+  justify-content: center;
+  margin: 8px;
+}
+
+.login-button{
+  /*background-color: #1c5380;*/
+  background: rgb(75,119,156);
+  background: linear-gradient(0deg, rgba(75,119,156,1) 28%, rgba(107,143,175,1) 73%);
+  width: 100px;
+  margin: auto;
+  border-radius: 5px;
+  padding: 15px;
+  box-shadow: 2px 2px 5px #06365f;
+}
+
+.main-section-b{
+  margin: 20px;
+  width: 36%;
+}
+
+.align-center {
+  align-items: center;
+  justify-content: center;
+}
+
+a img{
+  margin: 10px;
+}
+
+nav a {
+  margin: 0px 7px;
+}
+
+
+
+
+
