--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,14 +3,100 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-img {
+/*img {
   width: 100%;
+}*/
+* {
+  margin: 0;
+  padding: 0;
 }
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+main{
+  margin: 100px 100px 0px;
+  align-items: center;
+  justify-content: center;
+
+}
+
+div {
+  padding: 15px 0px;
+}
+
+header {
+  margin:10px;
+}
+
+header a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.1em;
+  text-align: center;
+  justify-content: center;
+  padding: 10px;
+  margin: auto; 
+  margin-left: 50px;
+  border:  1px solid #06365f;
+  border-radius: 8px;
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 15%, rgba(83,152,208,1) 96%);
+  }
+
+article{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+  margin:10px;
+  padding:20px 30px;
+  
+}
+
+h1 {
+  font-size: 1.8em ;
+  color: #06365f
+}
+
+p {
+  margin: 10px 0px;
+}
+
+figure {
+  align-items: flex-end;
+}
+
+ul {
+  color: #6c6c6d;
+  list-style: none;
+  padding: 0px;
+  text-transform: uppercase;
+}
+li {
+  margin:15px;
+}
+ul a {
+  font-size: 0.8em;
+  color: #1c5380;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .display-flex{
   display: flex;
 }
+
+.imagen-logo{
+}
+
+.boton-login{
+  width: 100px;
+}
+
+/*
+no se como ajustar el tamaño del texto a la imagen de fondo  en el article 
+no se como ajustar la separacion de los elementos del header de la section de la derecha 
+*/
