--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,149 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* My code starts here
+*/
+
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.main {
+  background-image: url(../images/bgtile.png);
+  background-repeat:repeat-x;
+  display: flex;
+  justify-content: space-between;
+  padding: 70px 175px;
+}
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+}
+
+.instalogo {
+  width: 400px;
+}
+
+.home {
+  width: 40px;
+}
+
+button {
+  background: linear-gradient(white, #06365f);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid #033b69;
+  border-radius: 4px;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  width: 150px;
+  padding: auto;
+  height: 70px;
+  margin-top: 10px;
+}
+
+.main div {
+  margin: 20px;
+}
+
+.phones img {
+  width: 400px;
+}
+
+.explanation {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 40px;
+  padding: 40px;
+  width: 425px;
+  font-weight: bold;
+}
+
+p {
+  padding: 10px 40px;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+
+.download img {
+  width: 200px;
+  padding: 20px 0px 0px 40px;
+}
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 20px auto;
+  width: 80%;
+  color: gray
+}
+ul {
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: flex;
+}
+
+li {
+  display: flex;
+  margin-right: 20px;
 }
