--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /*
 Colors to use:
 dark blue: #06365f
@@ -7,4 +12,110 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.bluebox {
+  background-color: #1c5380;
+  position: absolute;
+  height: 300px;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.main {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 850px;
+  margin: 0 auto;
+  top: 100px;
+  flex-direction: column;
+}
+
+.mainWrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contentContainer{
+  margin-left: 2em;
+}
+
+.contentContainer nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.phonesContainer img{
+width: 250px;
+}
+
+.loginbutton{
+  color: white;
+  padding: 0.4em 0.6em;
+  text-decoration: none;
+  border: 1px solid #06365f;
+  display: flex;
+  background-color: #376f9c;
+  border-radius: 5px;
+}
+
+.loginbutton span{
+  margin-left: 5px;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+}
+
+.contentSection{
+background-image: url("../images/frame.png");
+background-size: cover;
+padding: 3%;
+}
+
+.contentSection h2{
+color: rgb(8, 8, 56);
+font-size: 1.5em;
+text-align: left;
+padding: 5px 16px;
+}
+
+.contentSection p{
+  padding: 0.5em 1em;
+  font-size: 14px;
+}
+
+.storeButtons{
+  margin: 1em auto 0 2em;
+}
+
+.footer{
+  display: flex;
+  margin: 3em auto;
+  justify-content: space-evenly;
+}
+
+.footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer li {
+  display: inline-block;
+  margin: 0.6em;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.footer a{
+  text-decoration: none;
+  color: #1c5380;
+}
+
+.copyrigth{
+  color: gray;
 }
