--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,93 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.all{
+  display: flex;
+  width: 75%;
+  margin: 0 auto;
+  margin-top: 90px;
+}
+
+.phone{
+  width: 35%;
+  text-align: center;
+}
+
+.second{
+  width: 65%;
+}
+
+.encabezado{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 30px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.box{
+  margin-right: 30px;
+  padding: 10px;
+  height: 20px;
+  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(#7390ad, #45688b);
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.text{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  text-align: center;
+  margin: 0 auto;
+  width: 80%;
+  background-size: 100%;
+}
+
+.text2{
+  padding: 15px;
+}
+.end{
+  padding-top:60px;
+  display: flex;
+}
+
+.iphone{
+  margin-right: 20px;
+}
+footer{
+  text-align: center;
+  width: 50%;
+  margin:0 auto;
+}
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+}
+li{
+  color:#06365f;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+p{text-align: left;
+  font-size: 19px;
+
+}
+
+h2{
+  color:#06365f;
+  text-align: left;
+}
+.copyright{
+  color:grey;
 }
