--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,85 @@
 /*
 Colors to use:
-dark blue: #06365f
+
 light blue: #1c5380
 */
+*{
+  padding: 0;
+  margin: 0;
+}
+main{
+  margin: 150px 0 75px;
+}
+section{
+  width: 500px;
+}
+figure{
+  margin-right: 35px;
+}
 
+h1{
+  font-size: 2em;
+  padding: 20px;
+  color: #06365f;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  background-size: 300px 300px;
+}
+main{
+  display: flex;
+  justify-content: center;
+}
+footer{
+  margin-bottom: 40px;
+}
+span{
+  font-weight: 900;
+}
+
+p{
+  height: 250px;
+  padding:20px ;
+  font-size: 1.2em;
+  letter-spacing: 1px;
+}
+
+ul{
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+}
+
+li a{
+  text-decoration: none;
+  color: #1470F5;
+  margin: 0 15px;
+  font-weight: 900;
+}
+.insta{
+  background-image: url(../images/frame.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.color-grey{ 
+  color: grey;
+  font-weight: 900;
+}
+
+.block2{
+  margin-left: 35px;
+
+}
+
+.home{
+  text-decoration: none;
+  padding: 10px;
+  background-color: #1c5380;
+  color: white;
+  border: 1px solid black;
+  margin-left: 10px;
 }
