--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,6 +4,9 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+/*  body */
+
 body {
   display: flex;
   flex-direction: column;
@@ -14,6 +17,8 @@ body {
   background-repeat: repeat-x;
 }
 
+/*  Div */
+
 div {
   display: flex;
   flex-direction: flex-start;
@@ -21,9 +26,14 @@ div {
   margin: 100px 100px 20px 100px;
 }
 
+
+/* section */
+
 section {
   margin-left: 60px;
 }
+
+/* header */
 
 header {
   display: flex;
@@ -37,12 +47,14 @@ header {
   width: 100px;
   height: auto;
   padding: 10px;
-  border-radius: 10%;
-  background-color: #1c5380;
+  border-radius: 5%;
+  background-color: #3780bb;
   text-decoration: none;
   color: white;
   font-weight: bold; 
 }
+
+/* article */
 
 article {
   background: url(/home/mfernandezfreire/Documentos/W1/W1d1/lab-css-instagram-clone/starter-code/images/frame.png);
@@ -56,8 +68,10 @@ article {
 }
 
 article h2 {
-  padding: 30px;
+  padding: 30px 30px 0 30px;
+  margin-bottom: 15px;
   color: #06365f;
+  font-size: 2.5em;
 }
 
 article p {
@@ -70,6 +84,7 @@ em {
 }
 
 
+/*  footer */
 
 footer {
   display: flex;
