--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,103 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat:repeat-x;
+}
+h1 {
+  font-size: 1.5em;
+  color:#06365f;
+  width: 245px;
+}
+
+.div-global {
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  max-width: 2000px;
+  margin-top: 100px;
+
+}
+.header-logo {
+  display: flex;
+  justify-content:space-between; 
+}
+
+.logo{
+  width:60%;
+
+}
+
+.login-button {
+  background-color: #1c5380;
+  display: flex;
+  justify-content: space-between;
+  border:2px solid #06365f ;
+  border-radius: 5px;
+  width: 65px;
+  height: 35px;
+  font-size: 0.8em;
+  color:white;
+  padding: 0px 10px 3px 10px;
+  margin-top: 10px;
+}
+
+.login-button img {
+  margin-top: 12px;
+  width: 20px;
+  height:20px;
+
+}
+
+
+.content {
+  max-width: 500px;
+  margin: 0 30px;
+}
+
+.paragraphs {
+  border-radius: 20px;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  padding: 20px 50px;
+}
+.paragraphs p {
+  font-size: 0.95em;
+  font-weight: 300px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.buttons img {
+  margin: 0 20px;
+
+}
+
+footer {
+
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color:#1c5380;
+  font-weight: 600;
+  text-transform:uppercase;
+  margin: 50px;
+  font-size: 0.7em;
+
+}
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  margin: 0 20px;
+}
+
+footer li {
+  margin:0 5px;
+}
+footer span {
+  color:gray
 }
