--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,100 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+.container {
+  width: 75%;
+  margin: 0 auto;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+#leftBlock {
+  width: 40%;
+}
+
+#rightBlock {
+  width: 50%;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2em 0;
+  padding: 0 15px;
+}
+
+#btn-login {
+  text-decoration: none;
+  background-image: linear-gradient(rgb(113, 142,	170), rgb(82,	116,	151));
+  box-shadow: 0 0 4px 0.1px rgba(40, 40, 40, 0.6);
+  height: 45px;
+  width: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#btn-login span {
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+}
+
+#rightBlock section {
+  padding: 50px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+p{
+  line-height: 1.4em;
+}
+
+#btn-apps {
+  margin-top: 40px;
+}
+
+#btn-apps img{
+  margin-right: 15px;
+}
+
+section h2 {
+  color: #06365f;
+  margin: 0;
+  width: 60%;
+}
+
+footer {
+  width: 55%;
+  margin: 40px auto;
+  text-align: center;
+  font-weight: 500;
+  display: flex;
+  justify-content: space-around;
+}
+
+footer a {
+  color: #1c5380;
+  font-size: 0.9em;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+footer span {
+  color: grey;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
