--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,162 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+*http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain) * /
+    html,
+  body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+  pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd,
+  q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt,
+  dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot,
+  thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption,
+  footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark,
+  audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+#contenido {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 70%;
+ 
+  margin: 0 auto;
+  margin-top: 90px;
+  margin-bottom: 70px;
+}
+
+#logo {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+#imagen-movil {
+  margin-right: 50px;
+}
+
+.logo {
+  margin-right: 70px;
+}
+
+button {
+  height: 50px;
+  border: 1px solid blue;
+  background: none;
+  border: 0;
+  line-height: normal;
+  overflow: visible;
+  padding: 5px;
+  color: red;
+  font-size: 16px;
+}
+
+#boton {
+    
+ 
+  border: 1px solid white;
+  height: 30px;
+  margin-bottom: 50px;
+
+  
+  
+  
+}
+
+#contenido-lateral{
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    background-color: white;
+    padding: 20px 30px 0px 30px;
+}
+
+h1{
+    color: #0F375C;
+    font-size: 26px;
+    padding: 0 210px 0 0;
+    line-height: 30px;
+    
+}
+
+p{
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+footer{
+
+    display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 100%;
+
+}
+nav{
+    text-align: center;
+    margin: auto;
+    
+    
+}
+
+nav ul {
+    width: 100%;
+    margin: auto;
+    
+   
+   
+}
+nav ul li{
+    display: inline;
+   
+    margin-right: 20px;
+    color: #4D799D;
+    font-size:14px;
+}
+span{
+    float: right;
 }
