--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,103 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+header {
+  height: 250px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+}
+
+h2 {
+  padding: 30px 40px 20px 40px;
+  width: 250px;
+  color: #1c5380;
+  line-height: 1.3em;
+}
+p {
+  padding: 5px 40px;
+}
+.maininfo {
+  position: absolute;
+  top: 80px;
+}
+.maincolumn {
+  margin: auto 200px;
+  display: flex;
+  align-items: center;
+}
+section {
+
+}
+.section1 {
+  width: 40%;
+}
+.section2 {
+  width: 60%;
+}
+.top-section2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.button {
+  height: 20px;
+  border: 1px solid #06365f;
+  border-radius: 3px;
+  background: rgb(6,54,95);
+  background: linear-gradient(180deg, #6a8ead 0%, #4c779c 35%);
+
+  display: flex;
+  align-items: center;
+  padding: 10px 10px;
+  margin: 10px;
+}
+.login {
+  padding: 5px 10px;
+  color:white;
+  font-size: 0.8em;
+  font-weight: 600;
+}
+.img-first {
+  width: 270px;
+}
+.img-second {
+  padding-right: 15px;
+  height: 45px;
+}
+.bg2{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.bglogos{
+  padding: 10px 30px;
+}
+footer {
+  width: 650px;
+  margin: 50px auto;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8em;
+  color: grey;
+}
+nav ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  list-style: none;
+}
+nav li {
+
+}
+nav a{
+  text-decoration: none;
+  color: #1c5380;
 }
