--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     background-image: url(./starter-code/images/bgtile.png);
     background-repeat: repeat-x;
@@ -14,7 +13,8 @@ body {
   }
   
 .main{
-    margin: 30px;
+    margin: 50px;
+    padding: 20px;
 }
 
 .header{
@@ -27,9 +27,11 @@ body {
       background-color: white;
       width: 600px;
       padding: 30px;
+      margin: 5px;
       border-radius: 5px;
       box-shadow: 2px 0 2px 0 rgba(3, 3, 3, 0.253);
   }
+
 .information h1 {
     color: #06365f;
     font-family: Arial, Helvetica, sans-serif;
@@ -45,16 +47,25 @@ body {
     margin-top: 20px;
 }
 
+.information span {
+    font-weight: bold;
+}
+
 .images {
-    margin: 40px;
+    margin: 20px 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
+.images img {
+    padding: 0 20px;
+}
+
 .button {
       color: white;
       background-color: #1c5380;
+      background: linear-gradient(0deg, #1c5380, #70b4ec);
       border: 0;
       border-radius: 2px;
       box-shadow: 2px 0 2px 0 rgba(3, 3, 3, 0.253);
@@ -70,7 +81,7 @@ body {
     color: #1c5380;
     text-transform: uppercase;
     font-weight: bold;
-    margin: 0 ;
+    margin: 30px 0;
   }
 
 .nav-bar ul {
